💄 Fix profile card info overflow

--- a/app/(main)/components/ProfileCard/styles.module.scss
+++ b/app/(main)/components/ProfileCard/styles.module.scss
@@ -10,7 +10,9 @@
   padding: 0.5rem;
   gap: 0.5rem;
   align-items: center;
-  max-width: 100%;
+  min-width: 0;
+  width: 50%;
+  flex-grow: 1;
 }
 
 .names {
@@ -34,19 +36,18 @@
   color: var(--text-contrast-100);
   line-height: 1.25;
   white-space: nowrap;
+  min-width: 0;
 }
 
 .buttons {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  flex-grow: 1;
   padding: 0.5rem;
 }
 
 .button {
-  aspect-ratio: 1;
-  height: 100%;
+  width: 2.5rem;
+  height: 2.5rem;
   border: none;
   border-radius: var(--br);
   background-color: transparent;
